<resources>
    <string name="app_name">Распознавание латинских букв</string>
    <string name="invalid_number_hidden">Число нейронов в скрытом слое должно быть от 26 до 500</string>
    <string name="invalid_number_cycle">Число эпох обучения должно быть от 1 до 100</string>
    <string name="invalid_number_cycle_and_error">Введите либо число эпох обучения, либо погрешность</string>
    <string name="invalid_learning_rate">Коэффициент обучения лежит в диапазоне от 0 до 1</string>
    <string name="invalid_type_algorithm">Выберите тип алгоритма обучения</string>
    <string name="invalid_error">Погрешность должна быть меньше 10</string>
    <string name="invalid_image">Загрузите изображение</string>
    <string name="login_failed">Неправильно введены данные</string>
    <string name="prompt_learning">Коэффициент обучения</string>
    <string name="unknown_error_message">Неизвестная ошибка</string>
    <string name="remote_error_message">Удаленная ошибка</string>
    <string name="network_error_message">Ошибка сети</string>
    <string name="save">Сохранить</string>
    <string name="download">Загрузить</string>
    <string name="delete">Удалить</string>
    <string name="num_neurons">Количество нейронов в скрытом слое</string>
    <string name="num_epochs">Количество эпох обучения</string>
    <string name="training_error">Погрешность обучения</string>
    <string name="algorithm">Алгоритм обучения</string>
    <string name="backprop">BackProp</string>
    <string name="rprop">RProp</string>
    <string name="ipprop">iPProp+</string>
    <string name="response">Ответ сети:</string>
    <string name="create_network">Создать нейронную сеть</string>
    <string name="train_network">Обучить нейронную сеть</string>
    <string name="upload_image">Загрузить изображение</string>
    <string name="ru_en">ru_RU/en_US</string>
    <string name="recognize_letter">Распознать букву</string>
    <string name="neural_network">Нейронная сеть</string>
    <string name="items_found">Найдено элементов:</string>
    <string name="hint_name_network">Введите название нейронной сети</string>
    <string name="enter_course_name">Введите название курса</string>
    <string name="enter_course_duration">Введите продолжительность курса</string>
    <string name="enter_course_tracks">Введите курсы</string>
    <string name="enter_course_description">Введите описание курса</string>
    <string name="update_course">Обновить курс</string>
    <string name="delete_course">Удалить курс</string>
    <string name="course_name">Название курса</string>
    <string name="course_tracks">Курсы</string>
    <string name="duration">Продолжительность</string>
    <string name="description">Описание</string>
    <string name="app_name_deleting">Удаление нейронной сети</string>
    <string name="app_name_loading">Загрузка  нейронной сети</string>
    <string name="trained_successfull">Нейронная сеть обучена</string>
    <string name="algorithm_null">Выберите алгоритм обучения</string>
    <string name="image_null">Загрузите изображение</string>
    <string name="incomplete_data">Введите данные для создания нейронной сети</string>
    <string name="network_null">Создайте нейронную сеть</string>
    <string name="flagTrain_zero">Обучите нейронную сеть</string>
    <string name="network_created">Нейронная сеть создана</string>
    <string name="network_loaded">Нейронная сеть загружена</string>
    <string name="network_saved">Нейронная сеть сохранена</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_password">Введите пароль</string>
    <string name="error_signin">Ошибка авторизации</string>
    <string name="add_user">Пользователь добавлен</string>
    <string name="error_register">Ошибка регистрации</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="check_server">Проверить работу сервера</string>
</resources>