<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/container"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@drawable/networkicon____2_"    android:paddingLeft="@dimen/activity_horizontal_margin"    android:paddingTop="@dimen/activity_vertical_margin"    android:paddingRight="@dimen/activity_horizontal_margin"    android:paddingBottom="@dimen/activity_vertical_margin"    tools:context=".ui.network.NetworkActivity">    <TextView        android:id="@+id/textView"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/neural_network"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintStart_toStartOf="parent"        tools:layout_editor_absoluteX="7dp" />    <LinearLayout        android:id="@+id/linearLayout"        android:layout_width="367dp"        android:layout_height="44dp"        android:layout_marginTop="24dp"        android:orientation="horizontal"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <Button            android:id="@+id/buttonSave"            android:layout_width="3dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:text="@string/save"            android:textAppearance="@style/TextAppearance.AppCompat.Body1"            android:textSize="12sp" />        <Button            android:id="@+id/buttonUpload"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="5dp"            android:layout_weight="1"            android:text="@string/download"            android:textAppearance="@style/TextAppearance.AppCompat.Body1"            android:textSize="12sp" />        <Button            android:id="@+id/buttonDelete"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="5dp"            android:layout_weight="1"            android:text="@string/delete"            android:textAppearance="@style/TextAppearance.AppCompat.Body1"            android:textSize="12sp" />    </LinearLayout>    <LinearLayout        android:id="@+id/linearLayout2"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginTop="20dp"        android:orientation="vertical"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/linearLayout">        <TextView            android:id="@+id/textViewFiledNumberHidden"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/num_neurons" />        <EditText            android:id="@+id/filedNumberHidden"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:ems="10"            android:inputType="numberSigned"            android:textSize="12sp" />        <TextView            android:id="@+id/textViewFiledCoeffStudy"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/prompt_learning" />        <EditText            android:id="@+id/filedCoeffStudy"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:ems="10"            android:inputType="numberDecimal"            android:textSize="12sp" />        <TextView            android:id="@+id/textViewFiledNumberCycle"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/num_epochs" />        <EditText            android:id="@+id/filedNumberCycle"            android:layout_width="wrap_content"            android:layout_height="38dp"            android:ems="10"            android:inputType="numberSigned"            android:minHeight="48dp"            android:textSize="12sp" />        <TextView            android:id="@+id/textViewFiledError"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/training_error" />        <EditText            android:id="@+id/filedError"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:ems="10"            android:inputType="numberDecimal"            android:textSize="12sp" />    </LinearLayout>    <LinearLayout        android:id="@+id/linearLayout3"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="20dp"        android:orientation="horizontal"        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"        tools:layout_editor_absoluteX="16dp">        <RadioGroup            android:id="@+id/radioGroup"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1">            <TextView                android:id="@+id/TextViewAlgStudy"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:text="@string/algorithm"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintTop_toTopOf="parent" />            <androidx.constraintlayout.widget.ConstraintLayout                android:layout_width="match_parent"                android:layout_height="match_parent">            </androidx.constraintlayout.widget.ConstraintLayout>            <RadioButton                android:id="@+id/radioButtonBackProp"                android:layout_width="wrap_content"                android:layout_height="32dp"                android:text="@string/backprop"                android:textSize="10sp" />            <RadioButton                android:id="@+id/radioButtonRprop"                android:layout_width="wrap_content"                android:layout_height="34dp"                android:text="@string/rprop"                android:textSize="10sp" />            <RadioButton                android:id="@+id/radioButtonIpprop"                android:layout_width="wrap_content"                android:layout_height="28dp"                android:text="@string/ipprop"                android:textSize="10sp" />        </RadioGroup>        <LinearLayout            android:layout_width="14dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:orientation="vertical">            <TextView                android:id="@+id/Answer"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_gravity="top"                android:text="@string/response" />            <Button                android:id="@+id/button_create_network"                android:layout_width="match_parent"                android:layout_height="35dp"                android:text="@string/create_network"                android:textSize="8sp" />            <Button                android:id="@+id/buttonTrain"                android:layout_width="match_parent"                android:layout_height="31dp"                android:text="@string/train_network"                android:textSize="8sp" />            <LinearLayout                android:layout_width="180dp"                android:layout_height="wrap_content"                android:orientation="horizontal">            </LinearLayout>            <Button                android:id="@+id/imageButtonUpload"                android:layout_width="match_parent"                android:layout_height="32dp"                android:layout_gravity="bottom"                android:text="@string/upload_image"                android:textSize="8sp" />        </LinearLayout>    </LinearLayout>    <ImageView        android:id="@+id/locationIcon"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:layout_marginEnd="20dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"        app:srcCompat="@drawable/ic_baseline_location_on_24" />    <Button        android:id="@+id/server_check"        android:layout_width="wrap_content"        android:layout_height="32dp"        android:layout_gravity="bottom"        android:text="@string/check_server"        android:layout_marginTop="5dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@+id/locationIcon"        android:textSize="8sp" />    <ImageView        android:id="@+id/imageButton"        android:layout_width="127dp"        android:layout_height="112dp"        android:layout_marginTop="16dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.094"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"        tools:srcCompat="@tools:sample/avatars" />    <Button        android:id="@+id/recognizeButton"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:layout_marginBottom="24dp"        android:text="@string/recognize_letter"        android:textSize="10sp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.823"        app:layout_constraintLeft_toRightOf="@+id/imageButton"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintVertical_bias="1.0" /></androidx.constraintlayout.widget.ConstraintLayout>